lots of work on the litsbox and data template for the tweets

--- a/README
+++ b/README
@@ -1,6 +1,5 @@
 o3o is a C# WPF Twitter client
 
 TODO:
--create container for twitter messages
--api intergration
--basic UI work/elements
+- essential work/basic functionality
+- smooth draggable listbox?
