soundlib and preferences
added a sound library plus the ability to add your own sounds, be able
to preview it and to be able to ajust the volume. removed rounded image
corners because they dont support images with alpha. added sound
selector, previewer and opener.

--- a/README
+++ b/README
@@ -3,6 +3,5 @@ o3o is a C# WPF Twitter client
 as of now it works but still needs a lot of tweaks and features added.
 
 TODO:
-- user defined sounds and standard sound lib
-- streaming or polling tweets
-- smooth draggable listbox?
+- replace the tweet popup with a diffetent window element as a UserControl is unable to get TopMost
+- smooth draggable/gestureable scrolling listbox?
