tweets are a var, fixes, textcolor, spellcheck.
the max amount of tweets visible is a Setting now, i fixed the spaces in
the retweets, textbox now closes after the tweet and i added spell
checking.

--- a/README
+++ b/README
@@ -2,6 +2,4 @@ o3o is a C# WPF Twitter client
 
 as of now it works but still needs a lot of tweaks and features added.
 
-TODO:
-- replace the tweet popup with a diffetent window element as a UserControl is unable to get TopMost
-- smooth draggable/gestureable scrolling listbox?
+you need to have OpenAL installed and ffmpeg.exe needs to be present in o3o's directory
